<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="cancel">CANCEL</string>
    <string name="search_again">SEARCH AGAIN</string>
</resources>
