<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/settings"
        android:title="Settings"
        app:showAsAction="never" />

    <item android:id="@+id/history"
        android:title="History"
        app:showAsAction="never" />

    <item android:id="@+id/bookmark"
        android:title="Bookmark"
        app:showAsAction="never" />

    <item android:id="@+id/survey"
        android:title="Retake Survey"
        app:showAsAction="never" />


</menu>