...
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="112dp"
        android:onClick="goMenu"
        android:text="Cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="311dp"
        android:layout_height="32dp"
...
